Clean up of weekend's work
Cleanup of weekend hacked effort.

--- a/groover.html
+++ b/groover.html
@@ -15,7 +15,7 @@
         <script src="scripts/animFrame.js"></script>
         <script src="scripts/mouseKeyboard.js"></script>
         <script src="scripts/bitmaps.js"></script>
-        <script src="scripts/display.js"></script>
+        <script src="scripts/view.js"></script>
         <script src="scripts/ui.js"></script>
         <script src="scripts/render.js"></script>
         <script src="scripts/spriteEditor.js"></script>
