--- a/groover.html
+++ b/groover.html
@@ -5,6 +5,7 @@
         <title>Groover</title>      
         <link rel="stylesheet" type="text/css" href="groover.css">
         <script src="scripts/native.js"></script>
+        <script src="scripts/math.js"></script>
         <script src="scripts/main.js"></script>
         <script src="scripts/docUtills.js"></script>
         <script src="scripts/grooverUtils.js"></script>
@@ -21,7 +22,7 @@
 
         
     </head>
-    <body class="pageBody"  style="font-family:'Roboto+Condensed;">
+    <body class="pageBody" >
     
         <div class="splash" id="splashInfo">
             <img src='icons/groover.png'><br>
